--- a/Research Part 2.html
+++ b/Research Part 2.html
@@ -13,7 +13,7 @@
 
 	<nav>
 	<ul>
-			<a href="Research Portfolio.html"class="navi"> Research Portfolio</a>
+			<a href="index.html"class="navi"> Research Portfolio</a>
 			<a href="Research Part 1.html"class="navi">Research Part 1</a>
 			<a href="Publications & Awards.html"class="navi">Publications & Awards</a>
 			<a href="Contact.html"class="navi">Contacts</a>
