--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div id="wrapper1">
 		<ul>
 			<li>
-			<a href="Research Portfolio.html" class="navi"> Research Portfolio</a>
+			<a href="index.html" class="navi"> Research Portfolio</a>
 			<a href="Research Part 1.html" class="navi">Research Part 1</a>
 			<a href="Research Part 2.html" class="navi" research="" part="" 2="">Research Part 2</a>
 			<a href="Publications &amp; Awards.html" class="navi">Publications &amp; Awards</a>
