Update Publications & Awards.html

--- a/Publications & Awards.html
+++ b/Publications & Awards.html
@@ -15,7 +15,7 @@
 	
 	<nav>
 <ul>
-			<a href="Research Portfolio.html"class="navi"> Research Portfolio</a>
+			<a href="index.html"class="navi"> Research Portfolio</a>
 			<a href="Research Part 1.html"class="navi">Research Part 1</a>
 <a href="Research Part 2.html" class="navi">Research Part 2</a>
 			
