--- a/Contact.html
+++ b/Contact.html
@@ -22,14 +22,13 @@
 </ul>
 </nav>
 </body>
-<section id="primary">
 
+<section>
 
 <p>Please contact me for more information. Thank you for reading.</p>
 </section>
-<section id="secondary">
+<section>
 <h2>Contact Information</h2>
-
 <ul class="contact-info">
 <li class="tel"><a href="tel:505-795-8336">505-795-8336</a></li>
 <li class="mail"><a href="mailto:sancharidas22@gmail.com"> sancharidas22@gmail.com</a></li>
