Update Research Part 1.html

--- a/Research Part 1.html
+++ b/Research Part 1.html
@@ -16,7 +16,7 @@
          <ul>
 
 			<a href="index.html"class="navi"> Research Portfolio</a>
-			<a href="Research Part 2.html" class="navi">Research Part 2</a>
+			<a href="Research Part 2.html" class="navi">Research Part B</a>
 			<a href="Publications & Awards.html"class="navi">Publications & Awards</a>
 			<a href="Contact.html" class="navi">Contacts</a>	
       </ul>
