--- a/Research Part 2.html
+++ b/Research Part 2.html
@@ -14,7 +14,7 @@
 	<nav>
 	<ul>
 			<a href="index.html"class="navi"> Research Portfolio</a>
-			<a href="Research Part 1.html"class="navi">Research Part 1</a>
+			<a href="Research Part 1.html"class="navi">Research Part A</a>
 			<a href="Publications & Awards.html"class="navi">Publications & Awards</a>
 			<a href="Contact.html"class="navi">Contacts</a>
 </ul>
