--- a/Contact.html
+++ b/Contact.html
@@ -14,9 +14,9 @@
 	<nav>
 <ul>
 			<a href="index.html" class="navi"> Research Portfolio</a>
-<a href="Research Part 1.html" class="navi">Research Part 1</a>
+<a href="Research Part 1.html" class="navi">Research Part A</a>
 
-			<a href="Research Part 2.html" class="navi">Research Part 2</a>
+			<a href="Research Part 2.html" class="navi">Research Part B</a>
 			<a href="Publications & Awards.html" class="navi">Publications & Awards</a>
 				
 </ul>
