--- a/Publications & Awards.html
+++ b/Publications & Awards.html
@@ -16,8 +16,8 @@
 	<nav>
 <ul>
 			<a href="index.html"class="navi"> Research Portfolio</a>
-			<a href="Research Part 1.html"class="navi">Research Part 1</a>
-<a href="Research Part 2.html" class="navi">Research Part 2</a>
+			<a href="Research Part 1.html"class="navi">Research Part A</a>
+<a href="Research Part 2.html" class="navi">Research Part B</a>
 			
 			<a href="Contact.html"class="navi">Contacts</a>
 </ul>
