--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<div id="wrapper1">
 		<ul>
 			<li>
-			<a href="Research Part 1.html" class="navi">Research Part 1</a>
-			<a href="Research Part 2.html" class="navi" research="" part="" 2="">Research Part 2</a>
+			<a href="Research Part 1.html" class="navi">Research Part A</a>
+			<a href="Research Part 2.html" class="navi">Research Part B</a>
 			<a href="Publications &amp; Awards.html" class="navi">Publications &amp; Awards</a>
 <a href="Contact.html" class="navi">Contact</a>
 			</li>
