--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <a href="Research Part 2.html" id="research2">Research Part B</a>
 Enjoy the movies which shows the single cancer cell trapping in real time. 
 <br>
-I have worked as an Analytical Chemist at a pharmaceutical company and developed <strong>UHPLC</strong> method for separating and quantifying water and fat soluble vitamins. It was a pretty cool job. But I wanted to do more. So I joined Intel as a Process Engineer and my job role is that of the Chemical Engineer of the group. We are involved in chemical vapor deposition of dielectric thin films to form the <q>Fins</q> of the FINFETS. I cannot talk about the actual process, as it is Intellectual Property but can guide to some very cool articles about the process in general.
+I have worked as an Analytical Chemist at a pharmaceutical company and developed <strong>UHPLC</strong> method for separating and quantifying water and fat soluble vitamins. It was a pretty cool job. But I wanted to do more. So I joined Intel as a Process Engineer and my job role is that of the Chemical Engineer of the group. We are involved in chemical vapor deposition of dielectric thin films to form the <q>Fins</q> of the FINFETS. I cannot talk about the actual process, as it is Intellectual Property but can guide to some very cool articles about the process in general(UPON REQUEST ONLY!).
 </p>
 </section>
 
