Update Publications & Awards.html

--- a/Publications & Awards.html
+++ b/Publications & Awards.html
@@ -22,7 +22,7 @@
 			<a href="Contact.html"class="navi">Contacts</a>
 </ul>
 	</nav>
-<h1> Publications</h1>
+<h2> Publications</h2>
 </body>
 <section>
 <dlid="table"> 
@@ -52,8 +52,8 @@ Sanchari [Das] Bhattacharya, Ardhendu.K.Mondal, Aparajita Ghosh, Subhamay Panda,
 </dl>
 </body>
 <br>
-<h1>Awards</h1>
-<h2> Invited Presentation:</h2>
+
+<h2> Awards & Invited Presentations:</h2>
 <dl>
 <dt id="table"><strong>Federation of Analytical Chemistry and Spectroscopy Societies (FACSS, 2012)</strong>
 <br>
